<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_tlln_interfaces</name>
  <version>0.0.0</version>
  <description>ros2_tlln_interfaces contains messages and services that are widely used by other ROS packages.</description>
  <maintainer email="warren@telelian.com">wonjae.h</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>canvas_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>